--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.17.6-SNAPSHOT</version>
+        <version>1.17.6</version>
     </parent>
 
     <artifactId>byte-buddy-agent</artifactId>
@@ -19,7 +18,7 @@
         <packages.list>net.bytebuddy.agent,net.bytebuddy.agent.utility.nullability</packages.list>
         <native.compiler.32>i686-w64-mingw32-gcc</native.compiler.32>
         <native.compiler.64>x86_64-w64-mingw32-gcc</native.compiler.64>
-        <net.bytebuddy.test.jnapath/>
+        <net.bytebuddy.test.jnapath />
     </properties>
 
     <name>Byte Buddy agent</name>
@@ -279,15 +278,15 @@
                                 <configuration>
                                     <skip>${bytebuddy.original-sources}</skip>
                                     <target>
-                                        <delete dir="${project.build.directory}/sources-copy" failonerror="false"/>
-                                        <unzip src="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar" dest="${project.build.directory}/sources-copy"/>
+                                        <delete dir="${project.build.directory}/sources-copy" failonerror="false" />
+                                        <unzip src="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar" dest="${project.build.directory}/sources-copy" />
                                         <copy todir="${project.build.directory}/sources-copy/META-INF/versions/9">
                                             <fileset dir="${project.build.directory}/sources-copy">
-                                                <include name="net/bytebuddy/**/*.java"/>
+                                                <include name="net/bytebuddy/**/*.java" />
                                             </fileset>
                                         </copy>
-                                        <delete file="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar"/>
-                                        <zip basedir="${project.build.directory}/sources-copy" destfile="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar" modificationtime="${project.build.outputTimestamp}"/>
+                                        <delete file="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar" />
+                                        <zip basedir="${project.build.directory}/sources-copy" destfile="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar" modificationtime="${project.build.outputTimestamp}" />
                                     </target>
                                 </configuration>
                             </execution>
