--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.17.7-SNAPSHOT</version>
+        <version>1.17.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>byte-buddy-agent</artifactId>
@@ -271,7 +271,7 @@
                         <executions>
                             <execution>
                                 <id>modify-source-jar</id>
-                                <phase>verify</phase>
+                                <phase>package</phase>
                                 <goals>
                                     <goal>run</goal>
                                 </goals>
