--- a/byte-buddy-benchmark/pom.xml
+++ b/byte-buddy-benchmark/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.17.7-SNAPSHOT</version>
+        <version>1.17.7</version>
     </parent>
 
     <artifactId>byte-buddy-benchmark</artifactId>
