--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
         <bytecode.test.version>1.6</bytecode.test.version>
         <pitest.target>net.bytebuddy</pitest.target>
         <version.asm>9.8</version.asm>
-        <version.asmjdkbridge>0.0.10</version.asmjdkbridge>
+        <version.asmjdkbridge>0.0.11</version.asmjdkbridge>
         <version.jna>5.12.1</version.jna>
         <version.junit>4.13.2</version.junit>
         <version.mockito>2.28.2</version.mockito>
@@ -812,6 +812,21 @@
                 <jacoco.skip>true</jacoco.skip>
             </properties>
         </profile>
+        <!-- Runs the build with compatibility for Java 26 JVMs. -->
+        <profile>
+            <id>java26-compatibility</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <jdk>26</jdk>
+            </activation>
+            <properties>
+                <sourcecode.main.version>8</sourcecode.main.version>
+                <sourcecode.test.version>8</sourcecode.test.version>
+                <bytecode.main.version>8</bytecode.main.version>
+                <bytecode.test.version>8</bytecode.test.version>
+                <jacoco.skip>true</jacoco.skip>
+            </properties>
+        </profile>
         <!-- Builds using a byte code target for Java 6. -->
         <profile>
             <id>java6</id>
@@ -1036,6 +1051,18 @@
             <properties>
                 <bytecode.main.version>25</bytecode.main.version>
                 <bytecode.test.version>25</bytecode.test.version>
+                <spotbugs.skip>true</spotbugs.skip>
+            </properties>
+        </profile>
+        <!-- Builds using a byte code target for Java 26. -->
+        <profile>
+            <id>java26</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <bytecode.main.version>26</bytecode.main.version>
+                <bytecode.test.version>26</bytecode.test.version>
                 <spotbugs.skip>true</spotbugs.skip>
             </properties>
         </profile>
