--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
       - uses: actions/checkout@1d96c772d19495a3b5c517cd2bc0cb401ea0529f # v4.1.3
       - uses: actions/setup-java@6a0805fcefea3d4657a47ac4c165951e33482018 # v4.2.2
         with:
-          java-version: 25-ea
+          java-version: 26-ea
           distribution: temurin
           cache: maven
       - name: Build project
-        run: ./mvnw verify -Pjava25
+        run: ./mvnw verify -Pjava26
         continue-on-error: false
   hotspot-supported:
     name: Any (supported)
@@ -31,7 +31,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-24.04, macos-14, windows-2022 ]
-        java: [ 8, 11, 17, 21 ]
+        java: [ 8, 11, 17, 21, 25 ]
     runs-on: ${{ matrix.os }}
     needs: [ extended ]
     steps:
