--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -246,36 +246,9 @@
             </build>
         </profile>
         <profile>
-            <id>build-java-11</id>
+            <id>build-java-windows</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
-                <jdk>11</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <!-- Avoids occasional segfault. -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${version.plugin.surefire}</version>
-                        <configuration combine.children="append">
-                            <excludes>
-                                <exclude>net.bytebuddy.description.type.TypeDescriptionArrayProjectionTest</exclude>
-                                <exclude>net.bytebuddy.description.annotation.AnnotationDescriptionForLoadedAnnotationTest</exclude>
-                                <exclude>net.bytebuddy.description.annotation.AnnotationDescriptionForLoadedAnnotationDifferentClassLoaderTest</exclude>
-                                <exclude>net.bytebuddy.description.annotation.AnnotationDescriptionLatentTest</exclude>
-                                <exclude>net.bytebuddy.pool.TypePoolDefaultAnnotationDescriptionTest</exclude>
-                            </excludes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>build-java-17-windows</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <jdk>17</jdk>
                 <os>
                     <family>Windows</family>
                 </os>
