Add property for semantic versioning.

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 
     <properties>
         <copyright.holder>Rafael Winterhalter</copyright.holder>
+        <versioning.sematic>true</versioning.sematic>
         <bytebuddy.extras>false</bytebuddy.extras>
         <bytebuddy.original-sources>true</bytebuddy.original-sources>
         <bytebuddy.integration>false</bytebuddy.integration>
@@ -1309,7 +1310,7 @@
                                         <oldVersionPattern>\d+\.\d+\.\d+</oldVersionPattern>
                                         <ignoreMissingClasses>true</ignoreMissingClasses>
                                         <onlyBinaryIncompatible>true</onlyBinaryIncompatible>
-                                        <breakBuildBasedOnSemanticVersioning>false</breakBuildBasedOnSemanticVersioning>
+                                        <breakBuildBasedOnSemanticVersioning>${versioning.sematic}</breakBuildBasedOnSemanticVersioning>
                                     </parameter>
                                 </configuration>
                             </execution>
