--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -41,6 +41,7 @@
             net.bytebuddy.description.field,
             net.bytebuddy.description.method,
             net.bytebuddy.description.modifier,
+            net.bytebuddy.description.module,
             net.bytebuddy.description.type,
             net.bytebuddy.dynamic,
             net.bytebuddy.dynamic.loading,
