--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -191,6 +191,7 @@ jobs:
             -Dgpg.keyname=B4AC8CDC141AF0AE468D16921DA784CCB5C46DD5 \
             -Dgradle.key=${{ secrets.gradle_key }} \
             -Dgradle.secret=${{ secrets.gradle_secret }} \
+            -Ppublish-jdk5 \
             -Pchecksum-enforce
           git checkout byte-buddy-${BASE_VERSION}
           ./mvnw versions:set -DnewVersion=${BASE_VERSION} -DgenerateBackupPoms=false
@@ -201,5 +202,5 @@ jobs:
             -Dgpg.keyname=B4AC8CDC141AF0AE468D16921DA784CCB5C46DD5 \
             -Dgradle.key=${{ secrets.gradle_key }} \
             -Dgradle.secret=${{ secrets.gradle_secret }} \
-            -Pchecksum-enforce \
-            -Ppublish-jdk8-fast
+            -Ppublish-jdk8 \
+            -Pchecksum-enforce
