--- a/pom.xml
+++ b/pom.xml
@@ -430,12 +430,21 @@
     </reporting>
 
     <profiles>
+        <!-- Configures for publication build with Java 5 baseline. -->
         <profile>
-            <id>publish</id>
+            <id>publish-jdk5</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
-                <jdk>[1.8,)</jdk>
             </activation>
+            <properties>
+                <maven.test.skip>true</maven.test.skip>
+                <skipTests>true</skipTests>
+                <japicmp.skip>true</japicmp.skip>
+                <animal.sniffer.skip>true</animal.sniffer.skip>
+                <spotbugs.skip>true</spotbugs.skip>
+                <checkstyle.skip>true</checkstyle.skip>
+                <jacoco.skip>true</jacoco.skip>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -451,16 +460,15 @@
                 </plugins>
             </build>
         </profile>
-        <!-- Publishes with Java 8 baseline and skips all non-essential build steps. -->
+        <!-- Configures for publication build with Java 8 baseline. -->
         <profile>
-            <id>publish-jdk8-fast</id>
+            <id>publish-jdk8</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
-                <jdk>[1.8,)</jdk>
             </activation>
             <properties>
-                <bytecode.main.version>1.8</bytecode.main.version>
-                <bytecode.test.version>1.8</bytecode.test.version>
+                <bytecode.main.version>8</bytecode.main.version>
+                <bytecode.test.version>8</bytecode.test.version>
                 <release.profiles>extras,gpg,gradle-release,upgrade-release</release.profiles>
                 <maven.test.skip>true</maven.test.skip>
                 <skipTests>true</skipTests>
@@ -468,9 +476,7 @@
                 <animal.sniffer.skip>true</animal.sniffer.skip>
                 <spotbugs.skip>true</spotbugs.skip>
                 <checkstyle.skip>true</checkstyle.skip>
-                <enforcer.skip>true</enforcer.skip>
                 <jacoco.skip>true</jacoco.skip>
-                <modulemaker.skip>true</modulemaker.skip>
             </properties>
             <build>
                 <plugins>
@@ -894,8 +900,8 @@
                 <activeByDefault>false</activeByDefault>
             </activation>
             <properties>
-                <bytecode.main.version>1.8</bytecode.main.version>
-                <bytecode.test.version>1.8</bytecode.test.version>
+                <bytecode.main.version>8</bytecode.main.version>
+                <bytecode.test.version>8</bytecode.test.version>
             </properties>
         </profile>
         <!-- Builds using a byte code target for Java 9. -->
