--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,21 +132,18 @@ jobs:
           egress-policy: block
           disable-telemetry: true
           allowed-endpoints: >
-            coveralls.io:443
-            dl.google.com:443
-            docs.gradle.org:443
-            docs.oracle.com:443
             github.com:443
-            javadoc.io:443
-            jcenter.bintray.com:443
-            objects.githubusercontent.com:443
-            plugins-artifacts.gradle.org:443
-            plugins.gradle.org:443
-            raw.githubusercontent.com:443
-            repo.gradle.org:443
             repo.maven.apache.org:443
-            repository.sonatype.org:443
+            raw.githubusercontent.com:443
+            javadoc.io:443
             services.gradle.org:443
+            release-assets.githubusercontent.com:443
+            plugins.gradle.org
+            plugins-artifacts.gradle.org:443
+            dl.google.com:443
+            coveralls.io:443
+            docs.oracle.com:443
+            docs.gradle.org:443
       - uses: actions/checkout@1d96c772d19495a3b5c517cd2bc0cb401ea0529f # v4.1.3
       - uses: actions/setup-java@6a0805fcefea3d4657a47ac4c165951e33482018 # v4.2.2
         with:
@@ -167,6 +164,20 @@ jobs:
       - uses: step-security/harden-runner@17d0e2bd7d51742c71671bd19fa12bdc9d40a3d6 # V2.8.1
         with:
           egress-policy: block
+          allowed-endpoints: >
+            github.com:443
+            repo.maven.apache.org:443
+            raw.githubusercontent.com:443
+            javadoc.io:443
+            services.gradle.org:443
+            release-assets.githubusercontent.com:443
+            plugins.gradle.org
+            plugins-artifacts.gradle.org:443
+            dl.google.com:443
+            docs.oracle.com:443
+            docs.gradle.org:443
+            central.sonatype.com:443
+            s3.amazonaws.com:443
       - uses: actions/checkout@1d96c772d19495a3b5c517cd2bc0cb401ea0529f # v4.1.3
       - uses: actions/setup-java@6a0805fcefea3d4657a47ac4c165951e33482018 # v4.2.2
         with:
